[Fix Bug][SP] fix text overflow and sp ui

--- a/store/css/store-detail/store-information.css
+++ b/store/css/store-detail/store-information.css
@@ -1,19 +1,15 @@
-.notification-wrapper {
-     margin-block: 4rem;
-}
-
 .information-wrapper {
-   padding-block-start: 23px;
+   padding-block-start: 2.3rem;
    border-top: solid 8px #EDEBE9;
-   padding-block-end: 32px;
+   padding-block-end: 3.2rem;
 }
 
 .information__title {
    text-transform: uppercase;
    font-size: 1.4rem;
    color: rgba(0, 0, 0, 0.3);
-    margin-bottom: 2.4rem;   
-    line-height: 1.6rem;
+   margin-bottom: 2.4rem;   
+   line-height: 1.6rem;
 }
 
 .information__list {
@@ -51,7 +47,22 @@
      display: block;
 }
 
-@media (min-width: 640px) {
+@media screen and (min-width: 768px) and (max-width:1024px) {
+    .information__list__item__title { 
+        font-size: 1.8rem;
+        line-height: 3.2rem;
+        margin-bottom: 1.6rem;
+        -webkit-line-clamp: 2;
+    }
+
+    .information__list__item__desc {
+        font-size: 1.5rem;
+        line-height: 2.4rem;
+        -webkit-line-clamp: 3;
+    }
+}
+
+@media (min-width: 768px) {
     .information-wrapper {
         padding-block-start: 3.5rem;
         padding-block-end: 4rem;
@@ -60,7 +71,7 @@
      .information__title {
         font-size: 1.3rem;
         line-height: 2.7rem;
-         margin-bottom: 3.5rem;
+        margin-bottom: 3.2rem;
      }
 
      .information__list {
@@ -85,22 +96,13 @@
      }
 
      .information__list__item__title { 
-         font-size: 2.4rem;
-         line-height: 3.8rem;
-         margin-bottom: 2.8rem;
-
          display: -webkit-box;
-        -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
          overflow: hidden;
      }
 
      .information__list__item__desc {
-         font-size: 1.5rem;
-         line-height: 2.4rem;
-
          display: -webkit-box;
-        -webkit-line-clamp: 4;
         -webkit-box-orient: vertical;
          overflow: hidden;
      }
@@ -108,4 +110,19 @@
      .information__link {
          margin-top: 3.2rem;
      }
+}
+
+@media (min-width: 1024px) {
+    .information__list__item__title { 
+        font-size: 2.4rem;
+        line-height: 3.8rem;
+        margin-bottom: 2.8rem;
+        -webkit-line-clamp: 3;
+    }
+
+    .information__list__item__desc {
+        font-size: 1.5rem;
+        line-height: 2.4rem;
+        -webkit-line-clamp: 4;
+    }
 }
